# ai-academy

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/academy-api/: pyproject.toml
apps/academy-api/src/academy_api/: __init__.py  main.py
apps/academy-cli/: pyproject.toml
apps/academy-cli/src/academy_cli/: __init__.py  main.py
apps/academy-web/: index.html  package.json  vite.config.ts
apps/academy-web/src/: App.tsx  api.ts  app.css  types.ts
data/: cases.json  employees.json  routing-map.json
data/kb/faq/: benefits-faq.md  hr-services-faq.md  leave-faq.md
data/kb/guides/: how-to-check-request-status.md  how-to-correct-your-data.md  how-to-request-a-letter.md  how-to-request-time-off.md  life-event-bereavement.md  life-event-marriage.md  life-event-moving.md  life-event-new-child.md  payslips-and-payroll-calendar.md  when-to-contact-hr.md
data/kb/localized/: politica-de-vacaciones-es.md  urlaubsrichtlinie-de.md
data/kb/policies/: benefits-enrollment.md  bereavement.md  caregiver-medical-leave.md  company-holidays-2026.md  expense-reimbursement.md  pto.md  (+9 more)
data/letter-templates/: employment-verification.md  leave-confirmation.md
data/policies/: bereavement.md  caregiver-medical-leave.md  parental-leave.md  pto.md  remote-work.md  tuition-reimbursement.md
docs/: 01-scenario-chains.md  02-maf-patterns.md  03-personas-kpis.md  04-hitl-and-ledger.md  05-azure-ai-services-map.md  06-student-labs.md  07-m365-copilot-surface.md  08-knowledge-base.md  09-implementation-architecture.md
infra/: deploy.ps1  main.bicep
m365/: package.ps1
m365/appPackage/: ai-plugin.json  declarativeAgent.json  manifest.json  openapi.json
scenarios/hr-service-delivery/: README.md  hr-hrsd-01-policy-qa.md  hr-hrsd-02-status-lookup.md  hr-hrsd-03-kb-search.md  hr-hrsd-04-life-event.md  hr-hrsd-05-leave-absence.md  hr-hrsd-06-doc-generation.md  hr-hrsd-07-data-correction.md  hr-hrsd-08-deflection.md  hr-hrsd-09-multilingual.md
scripts/: make_icons.py
tests/: test_api.py  test_chain_runtime.py  test_kb.py  test_m365_package.py  test_scenarios.py
training/: student-deck-non-technical.html  student-deck.html  trainer-deck.html
(+3 files in other folders)
