[project]
name = "ai-academy"
version = "0.1.0"
description = "AI Academy — HR Service Delivery scenario-chain teaching monorepo (MAF + Azure AI services)"
requires-python = ">=3.11"
dependencies = [
    "academy-core",
    "academy-services",
    "academy-scenarios-hrsd",
    "academy-cli",
    "academy-api",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
academy-core = { workspace = true }
academy-services = { workspace = true }
academy-scenarios-hrsd = { workspace = true }
academy-cli = { workspace = true }
academy-api = { workspace = true }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["academy_core", "academy_services", "academy_hrsd", "academy_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
