[project]
name = "academy-api"
version = "0.1.0"
description = "AI Academy HTTP API — the action backend the M365 Copilot declarative agent calls"
requires-python = ">=3.11"
dependencies = [
    "academy-core",
    "academy-services",
    "academy-scenarios-hrsd",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academy_api"]

[tool.uv.sources]
academy-core = { workspace = true }
academy-services = { workspace = true }
academy-scenarios-hrsd = { workspace = true }
