[project]
name = "academy-cli"
version = "0.1.0"
description = "AI Academy CLI — list, inspect and run the HR Service Delivery scenario chains"
requires-python = ">=3.11"
dependencies = ["academy-core", "academy-services", "academy-scenarios-hrsd"]

[project.scripts]
academy = "academy_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academy_cli"]

[tool.uv.sources]
academy-core = { workspace = true }
academy-services = { workspace = true }
academy-scenarios-hrsd = { workspace = true }
